# planner

plugins/: meson.build
plugins/canvas-integration/: canvas-integration.code-workspace  canvas-integration.plugin  canvas_integration.vala  meson.build
